After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 676428 - Fix building on 64 bit mingw-w64
Fix building on 64 bit mingw-w64
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-gl
0.10.x
Other Windows
: Normal normal
: 0.10.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-05-20 15:45 UTC by Raimo Järvi
Modified: 2012-05-20 18:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix building on 64 bit mingw-w64 (7.75 KB, patch)
2012-05-20 15:49 UTC, Raimo Järvi
committed Details | Review

Description Raimo Järvi 2012-05-20 15:45:31 UTC
Build on 64 bit mingw-w64 fails with:

gstglwindow_win32.c:144:1: error: conflicting types for 'gst_gl_window_new'
gstglwindow.h:82:15: note: previous declaration of 'gst_gl_window_new' was here
gstglwindow_win32.c: In function 'gst_gl_window_new':
gstglwindow_win32.c:181:73: error: cast from pointer to integer of different size
gstglwindow_win32.c: In function 'gst_gl_window_get_internal_gl_context':
gstglwindow_win32.c:208:10: error: cast from pointer to integer of different size
gstglwindow_win32.c: In function 'gst_gl_window_set_external_window_id':
gstglwindow_win32.c:253:71: error: cast from pointer to integer of different size
gstglwindow_win32.c:257:35: error: 'GWL_WNDPROC' undeclared (first use in this function)
gstglwindow_win32.c:257:35: note: each undeclared identifier is reported only once for each function it appears in
gstglwindow_win32.c:257:48: error: cast from pointer to integer of different size
gstglwindow_win32.c:266:38: error: cast to pointer from integer of different size
gstglwindow_win32.c:271:61: error: cast to pointer from integer of different size
gstglwindow_win32.c:272:15: error: cast to pointer from integer of different size
gstglwindow_win32.c:273:15: error: cast to pointer from integer of different size
gstglwindow_win32.c:274:24: error: cast to pointer from integer of different size
gstglwindow_win32.c:277:39: error: cast to pointer from integer of different size
gstglwindow_win32.c:280:20: error: cast to pointer from integer of different size
gstglwindow_win32.c: In function 'window_proc':
gstglwindow_win32.c:477:80: error: cast from pointer to integer of different size
gstglwindow_win32.c:479:93: error: cast from pointer to integer of different size
gstglwindow_win32.c:484:104: error: cast from pointer to integer of different size
gstglwindow_win32.c:489:103: error: cast from pointer to integer of different size
gstglwindow_win32.c:489:130: error: cast from pointer to integer of different size
gstglwindow_win32.c:492:91: error: cast from pointer to integer of different size
gstglwindow_win32.c:569:41: error: 'GWL_WNDPROC' undeclared (first use in this function)
gstglwindow_win32.c:569:54: error: cast from pointer to integer of different size
gstglwindow_win32.c:580:91: error: cast from pointer to integer of different size
gstglwindow_win32.c:585:96: error: cast from pointer to integer of different size
gstglwindow_win32.c:591:95: error: cast from pointer to integer of different size

The following patch fixes this, but might cause problems on other systems, because it changes some function signatures.
Comment 1 Raimo Järvi 2012-05-20 15:49:14 UTC
Created attachment 214499 [details] [review]
Fix building on 64 bit mingw-w64
Comment 2 Tim-Philipp Müller 2012-05-20 18:33:38 UTC
Pushed, thanks:

 commit 5955913a44d67db4297b4405fffdd5cd4ec5a768
 Author: Raimo Järvi <raimo.jarvi@gmail.com>
 Date:   Sun May 20 18:45:06 2012 +0300

    Fix building on 64 bit mingw-w64
    
    https://bugzilla.gnome.org/show_bug.cgi?id=676428


API/ABI compatibility is not really a concern, don't think anyone external is using this, and if, the API is declared unstable.