[501/906] Fix building on 64 bit mingw-w64

https://bugzilla.gnome.org/show_bug.cgi?id=676428